Ajout de css + page a propos + modifications diverses du code

--- a/app/views/main/accueil.ejs
+++ b/app/views/main/accueil.ejs
@@ -2,15 +2,28 @@
 <%- include('../partials/header') %>
 
     <!--####### MAIN + DIV RESEAUX  #######-->
-
-        <div class="div__main__intro">
+    <div class="maindiv__mainpage">
+        <div class="div__intro__main">
             <h2 class="h2__div__main">Développeur web
                 <br>
                 <span class="span__2__main__div__h2">Fullstack JS</span>
                 <br>
-                <span class="span__main__div__h2">Orienté back-end</span> <span class="span__point__main__div__h2">. . .</span> 
+                <span class="span__main__div__h2">Orienté back-end</span> <span class="span__point1__main">.</span><span class="span__point2__main">.</span><span class="span__point3__main">.</span>
             </h2>
         </div>
+
+        <div class="div__skills__main">
+
+        <h2 class="h2__skills__main">Voici quelques-uns de mes skills</h3>   
+
+        <p class="p__mainpage">: langages de programmation :</p>
+
+        <img class="img__skills" src="../images/imagesskills/html5.svg" alt="html logo">
+        <img class="img__skills" src="../images/imagesskills/css.svg" alt="css logo">
+        <img class="img__skills" src="../images/imagesskills/javascript.svg" alt="js logo">
+        <img class="img__skills" src="../images/imagesskills/sql.svg" alt="sql logo">
+        </div>
+    </div>
 
 <%- include('../partials/footer') %>
 
