--- a/app/views/main/apropos.ejs
+++ b/app/views/main/apropos.ejs
@@ -1,31 +1,34 @@
 <%- include('../partials/header') %>
 
-    <main>
+    <main class="main__apropos">
         <div class="main__div__apropos">
-            <p>
-                Bonjour, moi c'est Fred.
+            <p class="apropos__p">
+                Bonjour, moi c'est Fred. 
+                <br>
+                <br>
+                <img class="my__image" src="../images/me/me.jpg" alt="Ma photo">
             </p>
-            <p>
+            <p class="apropos__p">
                 J'ai 25 ans, je vis dans le sud depuis 2 ans.
             </p>
-            <p>
-                J'ai un bac STI2D en poche, j'ai aussi passer un cap ébéniste. Et je suis actuellement au sein de l'école
-                O'clock pour effectuer la formation : Développeur Fullstack JavaScript, pour mener à bien ma
-                reconversion profésionnelle.
+            <p class="apropos__p">
+                J'ai un bac STI2D en poche, j'ai aussi passer un cap ébéniste. J'ai effectuer une reconversion professionnelle au sein de l'école O'clock (septembre 2022/mars 2023). 
+               <br> Ou j'ai pu apprendre de façon pousée et accélerer le dévelopemment web.
+               <br> Que ce soit par l'apprentisage de la base du web (html/css) ou bien par un language de programation (Javascript). Nous avons aussi vu tout ce qui est lié a la gestion de projet (User stories, routes, mld/mcd arbo des routes) et aussi nous avons pu choisir une spécialité. J'ai choisis le coté back-end adorant les bases de données le sql les scripts, le seeding etc.
             </p>
-            <p>
+            <p class="apropos__p">
                 J'ai eu la chance de faire deja beaucoup de choses dans ma vie, long séjour à l'étranger, 5ans en
-                Allemagne à Villingen, puis 2 ans à Djibouti dans la corne de l'Afrique.
+                Allemagne à Villingen, puis 2 ans à Djibouti.
             </p>
-            <p>
+            <p class="apropos__p">
                 J'ai pu explorer divers milieu profesionnels, en passant d'animateur en parc d'attraction en passant par
                 Macdonald's. Apres toutes ces expériences, il était temps de réélement trouver un metier qui me
                 plaisait. Naturellement je me suis diriger vers le dévelopement web ayant effectuer un bac informatique,
                 et aimant le codage, c'était le moment de concrétiser un projet solide.
-            </p>
-            <p>
                 
             </p>
+        
+           
         </div>
     </main>
 
