--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -4,4 +4,6 @@
 @import './main.scss';
 @import './404.scss';
 @import './form.scss';
+@import './apropos.scss';
 @import './footer.scss';
+@import './scrollbar.scss';
